# openwrt-python-pkg

./: Cargo.toml  README.md
src/: main.rs
templates/: Makefile.jinja
